--- a/index.html
+++ b/index.html
@@ -8,256 +8,152 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-html {
-  scroll-behavior: smooth;
-}
+html { scroll-behavior: smooth; }
+body { font-family: 'Segoe UI', sans-serif; background: #fdfaf7; color: #333; margin: 0; }
 
-body {
-  font-family: 'Segoe UI', sans-serif;
-}
+/* NAVBAR */
+.navbar { background: linear-gradient(45deg, #1a1a1a, #3a3a3a); }
+.navbar-brand { font-size: 24px; letter-spacing: 2px; }
 
-/* HERO */
-.hero {
-  background: url('images/hero.jpg') no-repeat center center/cover;
-  height: 90vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-align: center;
-}
+/* HERO WITH VIDEO */
+.hero { position: relative; height: 90vh; overflow: hidden; display: flex; align-items: center; justify-content: center; color: white; text-align: center; }
+.hero video { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1; }
+.hero h1 { font-size: 50px; font-weight: 700; animation: fadeInDown 1.5s ease-in-out; }
+.hero p { font-size: 22px; animation: fadeInUp 2s ease-in-out; }
+.hero .btn { animation: fadeInUp 2.5s ease-in-out; font-weight: 600; }
 
-/* CARD IMAGE SIZE */
-.card img {
-  height: 250px;
-  object-fit: cover;
-}
+/* ABOUT SECTION */
+.about-section { background: #fff8f0; padding: 80px 0; }
+.about-section h2 { margin-bottom: 30px; font-weight: 700; animation: fadeIn 2s ease-in-out; }
+.about-section p { font-size: 18px; line-height: 1.8; animation: fadeInUp 2.5s ease-in-out; }
+.about-features { display: flex; flex-wrap: wrap; gap: 30px; margin-top: 40px; justify-content: center; }
+.feature-box { background: white; border-radius: 10px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); padding: 25px; text-align: center; width: 250px; transition: transform 0.4s, box-shadow 0.4s; opacity: 0; transform: translateY(40px); }
+.feature-box.show { opacity: 1; transform: translateY(0); }
+.feature-box:hover { transform: translateY(-10px); box-shadow: 0 20px 35px rgba(0,0,0,0.2); }
 
-/* SUBMENU STYLE */
-.dropdown-submenu {
-  position: relative;
-}
+/* PRODUCTS */
+.card { border: none; border-radius: 15px; overflow: hidden; transition: 0.4s; opacity: 0; transform: translateY(30px); }
+.card.show { opacity: 1; transform: translateY(0); }
+.card img { height: 250px; object-fit: cover; transition: 0.4s; }
+.card:hover { transform: translateY(-10px) scale(1.03); box-shadow: 0 20px 35px rgba(0,0,0,0.2); }
+.card-body h5 { font-weight: 600; }
+.card-body button { border-radius: 25px; padding: 8px 25px; font-weight: 600; }
 
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  display: none;
-  margin-left: 0.1rem;
-}
+/* FOOTER */
+footer { background: #111; color: white; padding: 25px 0; text-align: center; }
 
-.dropdown-submenu:hover .dropdown-menu {
-  display: block;
-}
-
-footer {
-  background: #111;
-  color: white;
-  padding: 20px 0;
-}
+/* ANIMATIONS */
+@keyframes fadeInDown { from {opacity:0; transform:translateY(-40px);} to {opacity:1; transform:translateY(0);} }
+@keyframes fadeInUp { from {opacity:0; transform:translateY(40px);} to {opacity:1; transform:translateY(0);} }
+@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 </style>
 </head>
-
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-<div class="container">
-<a class="navbar-brand fw-bold" href="#">💎 Mahin Jewellery</a>
-
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
-
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav ms-auto">
-
-<li class="nav-item">
-<a class="nav-link" href="#home">Home</a>
-</li>
-
-<!-- MAIN DROPDOWN -->
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-Collections
-</a>
-
-<ul class="dropdown-menu">
-
-<li><a class="dropdown-item" href="#gold">Gold Collection</a></li>
-<li><a class="dropdown-item" href="#diamond">Diamond Collection</a></li>
-
-<!-- SUB DROPDOWN -->
-<li class="dropdown-submenu">
-<a class="dropdown-item dropdown-toggle" href="#">Bridal Collection</a>
-
-<ul class="dropdown-menu">
-<li><a class="dropdown-item" href="#bridal-necklace">Bridal Necklaces</a></li>
-<li><a class="dropdown-item" href="#bridal-set">Bridal Sets</a></li>
-</ul>
-
-</li>
-
-</ul>
-</li>
-
-<li class="nav-item">
-<a class="nav-link" href="#contact">Contact</a>
-</li>
-
-</ul>
-</div>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="#">💎 Mahin Jewellery</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 
 <!-- HERO -->
 <section id="home" class="hero">
-<div>
-<h1>Elegant Jewellery for Every Occasion</h1>
-<p class="lead">Shine Bright with Mahin Jewellery</p>
-<a href="#gold" class="btn btn-warning btn-lg mt-3">Explore Now</a>
-</div>
+  <video autoplay muted loop>
+    <source src="https://v.ftcdn.net/11/33/96/95/700_F_1133969521_xzMmJq1ykVzshAD7a6J23vQlH7NVcN4g_ST.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
+  <div>
+    <h1>Elegant Jewellery for Every Occasion</h1>
+    <p class="lead">Shine Bright with Mahin Jewellery</p>
+    <a href="#products" class="btn btn-warning btn-lg mt-3">Shop Now</a>
+  </div>
 </section>
 
-<!-- GOLD SECTION -->
-<section id="gold" class="py-5 bg-light">
-<div class="container">
-<h2 class="text-center mb-4">Gold Collection</h2>
-<div class="row g-4">
-
-<div class="col-md-6">
-<div class="card shadow">
-<img src="images/gold1.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Gold Necklace</h5>
-<p>Rs.5000</p>
-</div>
-</div>
-</div>
-
-<div class="col-md-6">
-<div class="card shadow">
-<img src="images/gold2.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Gold Bangles</h5>
-<p>Rs.95000</p>
-</div>
-</div>
-</div>
-
-</div>
-</div>
+<!-- ABOUT -->
+<section id="about" class="about-section">
+  <div class="container text-center">
+    <h2>About Mahin Jewellery</h2>
+    <p>
+      Mahin Jewellery has been crafting exquisite jewellery for over a decade. Our mission is to bring elegance, luxury, and timeless beauty to every piece. We specialize in gold, diamond, and bridal collections designed to make you shine.
+    </p>
+    <div class="about-features">
+      <div class="feature-box animate-on-scroll"> <h5>Premium Quality</h5> <p>Top-grade gold & diamonds in every product.</p> </div>
+      <div class="feature-box animate-on-scroll"> <h5>Unique Designs</h5> <p>Skilled artisans craft elegant pieces.</p> </div>
+      <div class="feature-box animate-on-scroll"> <h5>Customer Satisfaction</h5> <p>100% satisfaction guaranteed with trust & service.</p> </div>
+    </div>
+  </div>
 </section>
 
-<!-- DIAMOND SECTION -->
-<section id="diamond" class="py-5">
-<div class="container">
-<h2 class="text-center mb-4">Diamond Collection</h2>
-<div class="row g-4">
-
-<div class="col-md-6">
-<div class="card shadow">
-<img src="images/diamond1.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Diamond Ring</h5>
-<p>Rs.10000</p>
-</div>
-</div>
-</div>
-
-<div class="col-md-6">
-<div class="card shadow">
-<img src="images/diamond2.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Diamond Earrings</h5>
-<p>Rs.7000</p>
-</div>
-</div>
-</div>
-
-</div>
-</div>
-</section>
-
-<!-- BRIDAL NECKLACE -->
-<section id="bridal-necklace" class="py-5 bg-light">
-<div class="container">
-<h2 class="text-center mb-4">Bridal Necklaces</h2>
-<div class="row">
-
-<div class="col-md-6 mx-auto">
-<div class="card shadow">
-<img src="images/bridal1.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Heavy Bridal Necklace</h5>
-<p>Rs.5000</p>
-</div>
-</div>
-</div>
-
-</div>
-</div>
-</section>
-
-<!-- BRIDAL SET -->
-<section id="bridal-set" class="py-5">
-<div class="container">
-<h2 class="text-center mb-4">Bridal Sets</h2>
-<div class="row">
-
-<div class="col-md-6 mx-auto">
-<div class="card shadow">
-<img src="images/bridal2.jpg" class="card-img-top">
-<div class="card-body text-center">
-<h5>Complete Bridal Set</h5>
-<p>Rs.8000</p>
-</div>
-</div>
-</div>
-
-</div>
-</div>
+<!-- PRODUCTS -->
+<section id="products" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-5">Our Products</h2>
+    <div class="row g-4">
+      <!-- 12 Products -->
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://images.unsplash.com/photo-1642373174965-ef3793eabcb2?q=80&w=388&auto=format&fit=crop" class="card-img-top"><div class="card-body text-center"><h5>Gold Necklace</h5><p>Rs. 5000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://media.istockphoto.com/id/1254830985/photo/ring-diamond.jpg?s=1024x1024&w=is&k=20&c=tAwpLRfRH-Qe4kuCDs9eIDYtf-IC9ATFeqng_NEcKG4=" class="card-img-top"><div class="card-body text-center"><h5>Diamond Ring</h5><p>Rs. 10000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://5.imimg.com/data5/SELLER/Default/2024/1/378231335/NF/UV/UI/576430/whatsapp-image-2024-01-16-at-2-59-21-pm-1000x1000.jpeg" class="card-img-top"><div class="card-body text-center"><h5>Bridal Set</h5><p>Rs. 15000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://media.istockphoto.com/id/1396888542/photo/traditional-indian-gold-bangles.jpg?s=612x612&w=0&k=20&c=AdN1FpAbh8VCCsqo2bB3RQp6_TxFtPucJ-n0UlzOgGI=" class="card-img-top"><div class="card-body text-center"><h5>Gold Bangles</h5><p>Rs. 8000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://media.istockphoto.com/id/1332682686/photo/gold-earring-and-diamond.jpg?s=612x612&w=0&k=20&c=tujaIAAH3CL_CP4LFSyueYrDjU83uh-W8YuSAKtchz8=" class="card-img-top"><div class="card-body text-center"><h5>Diamond Earrings</h5><p>Rs. 7000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://d25g9z9s77rn4i.cloudfront.net/uploads/product/524/1662110385_14b79dd8389aef8e2d62.jpg" class="card-img-top"><div class="card-body text-center"><h5>Gold Ring</h5><p>Rs. 4500</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://media.istockphoto.com/id/658096268/photo/wedding-wedding-day-luxury-bracelet-on-the-brides-hand-close-up-hands-of-the-bride-before.jpg?s=612x612&w=0&k=20&c=HuYyxt8c3pJguIdFBhBFx-Sg_hnABP-lTqietT8_yVI=" class="card-img-top"><div class="card-body text-center"><h5>Silver Bracelet</h5><p>Rs. 3000</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <div class="col-md-3"><div class="card animate-on-scroll"><img src="https://images.unsplash.com/photo-1617038220319-276d3cfab638" class="card-img-top"><div class="card-body text-center"><h5>Gold Earrings</h5><p>Rs. 5500</p><button class="btn btn-dark">Buy Now</button></div></div></div>
+      <!-- add 3 more if needed -->
+    </div>
+  </div>
 </section>
 
 <!-- CONTACT -->
 <section id="contact" class="py-5 bg-light">
-<div class="container">
-<h2 class="text-center mb-4">Contact Us</h2>
-
-<div class="row justify-content-center">
-<div class="col-md-6">
-<form class="shadow p-4 bg-white rounded">
-
-<div class="mb-3">
-<label class="form-label">Full Name</label>
-<input type="text" class="form-control" required>
-</div>
-
-<div class="mb-3">
-<label class="form-label">Email</label>
-<input type="email" class="form-control" required>
-</div>
-
-<div class="mb-3">
-<label class="form-label">Message</label>
-<textarea class="form-control" rows="4" required></textarea>
-</div>
-
-<button class="btn btn-warning w-100">Send Message</button>
-
-</form>
-</div>
-</div>
-
-</div>
+  <div class="container">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form class="shadow p-4 bg-white rounded">
+          <div class="mb-3"><label class="form-label">Full Name</label><input type="text" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Email</label><input type="email" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Message</label><textarea class="form-control" rows="4" required></textarea></div>
+          <button class="btn btn-warning w-100">Send Message</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
 
 <footer class="text-center">
-<div class="container">
-<p>© 2026 Mahin Jewellery | All Rights Reserved</p>
-</div>
+  <div class="container">
+    <p>© 2026 Mahin Jewellery | All Rights Reserved</p>
+  </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+// Scroll animations for products and features
+function animateOnScroll() {
+  const elements = document.querySelectorAll('.animate-on-scroll, .feature-box');
+  const windowHeight = window.innerHeight;
+  elements.forEach(el => {
+    const elementTop = el.getBoundingClientRect().top;
+    if(elementTop < windowHeight - 100) {
+      el.classList.add('show');
+    }
+  });
+}
+window.addEventListener('scroll', animateOnScroll);
+window.addEventListener('load', animateOnScroll);
+</script>
 
 </body>
 </html>
